# robodoc

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  config.toml  license.html
.github/workflows/: rust.yml
src/: build.rs  config.rs  lib.rs  main.rs
src/analyzer/: extractor.rs  rust.rs
src/config/: config.rs  generate.rs  generator.rs  parser.rs  structure.rs
src/generator/: generator.rs
src/parser/: mod.rs  parser.rs  token.rs
src/scanner/: scanner.rs
src/styletest/: index.html
