[package]
name = "robodoc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
horrorshow = "0.8.4"
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"
