[package]
name = "robodoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
tree-sitter = "0.25.3"
walkdir = "2.5.0"

[build-dependencies]
cc = "1.2.19"